Fix caret position on small and mini buttons

--- a/src/less/buttons.less
+++ b/src/less/buttons.less
@@ -182,6 +182,10 @@
 	padding: 0 8px;
 	font-size: @baseFontSize - 1px;
 	line-height: @baseLineHeight - 4px;
+
+	.caret {
+		margin-top: 5px;
+	}
 }
 
 // Mini
@@ -189,6 +193,10 @@
 	padding: 0 8px;
 	font-size: @baseFontSize - 2px;
 	line-height: @baseLineHeight - 5px;
+
+	.caret {
+		margin-top: 4px;
+	}
 }
 
 // Link buttons
